<resources>
    <string name="app_name">Fotopoduska</string>
    <string name="app_title">Make pillow with photo</string>
    <string name="first_step_title">Choose photo</string>
    <string name="second_step_title">Enter information for an order</string>
    <string name="add_photo_title">Add photo you like to A and B sides:</string>
    <string name="order_done_title">Order completed</string>
    <string name="btn_order_pillow">Order a pillow with photo</string>
    <string name="btn_view_gallery">View pillows gallery</string>
    <string name="btn_add_foto_1">Add photo to side A</string>
    <string name="btn_add_foto_2">Add photo to side B</string>
    <string name="btn_next_step">Next >></string>
    <string name="btn_ok">OK</string>
    <string name="hint_inputName">Enter your name.</string>
    <string name="hint_inputEmail">Enter your email.</string>
    <string name="hint_inputPhone">Enter your phone.</string>
    <string name="hint_inputComments">Enter your comments on order here.</string>
    <string name="price_defaultVal">0 rub.</string>
    <string name="btn_confirm_order">Make order</string>
    <string name="err_select_photo">Please select at least one photo to add to pillow.</string>
    <string name="err_no_photo_selected">You haven\'t picked Image.</string>
    <string name="err_photo_size">Photo must be more then 1000 px x 1000 px size. This image is less. Please choose another.</string>
    <string name="err_photo_unknown">Something went wrong.</string>
    <string name="err_common_error_message">Field is incorrect!</string>
    <string name="err_name_required">Name required! It can\'t be less than 3 symbols.</string>
    <string name="err_email_required">Email address required! Check it.</string>
    <string name="err_phone_required">Please enter correct phone number to call you.</string>
    <string name="currency">rub.</string>
    <string name="email_destination">order@foto-podushki.ru</string>
    <string name="email_subject">New order from mobile app from </string>
    <string name="email_sending">Sending your order...</string>
    <string name="email_contact_info">Contact info:\n</string>
    <string name="email_lead_name">Lead name: </string>
    <string name="email_lead_phone">Phone: </string>
    <string name="email_lead_email">Email: </string>
    <string name="email_lead_comments">Comment and aditional info:\n</string>
    <string name="email_delimiter">~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n</string>
    <string name="email_order">Order:\n</string>
    <string name="email_order_size">Size: </string>
    <string name="email_order_material">Material: </string>
    <string name="email_order_brushes">Brushes: </string>
    <string name="email_order_cost">Order cost: </string>
    <string name="email_order_images">Images is attached to mail.</string>
    <string name="order_done">Your order is sent. Please wait for manager call on phone.</string>
</resources>
