<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/bg_pattern">
    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:columnCount="8"
        android:orientation="horizontal"
        android:id="@+id/gridLayout" android:rowCount="23"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photo_title"
            android:id="@+id/textView" android:layout_row="3" android:layout_column="5" android:layout_gravity="fill"
            android:layout_columnSpan="3" android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imagePhotoA" android:layout_row="5" android:layout_column="5"
            android:layout_width="@dimen/img_check_photo_size"
            android:layout_height="@dimen/img_check_photo_size" android:layout_margin="2dp" android:layout_gravity="top|left"
            android:background="@drawable/unchecked"
            tools:ignore="ContentDescription,RtlHardcoded" />
        <Button
            android:layout_width="302dp"
            android:layout_height="@dimen/btn_add_photo_size"
            android:text="@string/btn_add_foto_1"
            android:id="@+id/add_foto_1" android:layout_row="5" android:layout_column="7"
            android:layout_gravity="top"/>
        <ImageView
            android:layout_width="@dimen/first_screen_preview_size"
            android:layout_height="@dimen/first_screen_preview_size"
            app:srcCompat="@drawable/question"
            android:id="@+id/imagePreviewSideA"
            android:layout_row="7"
            android:layout_column="7" android:layout_gravity="top"
            android:layout_marginBottom="10dp"
            tools:ignore="ContentDescription"
            android:adjustViewBounds="false"
            android:clickable="false" />
        <ImageView
            android:layout_width="@dimen/img_check_photo_size"
            android:layout_height="@dimen/img_check_photo_size"
            android:id="@+id/imagePhotoB" android:layout_row="9" android:layout_column="5"
            android:layout_margin="2dp" android:layout_gravity="top|left" android:background="@drawable/unchecked"
            tools:ignore="ContentDescription,RtlHardcoded" />
        <Button
            android:layout_width="302dp"
            android:layout_height="@dimen/btn_add_photo_size"
            android:text="@string/btn_add_foto_2"
            android:id="@+id/add_foto_2" android:layout_row="9" android:layout_column="7" android:layout_gravity="top|left"
            android:layout_marginBottom="15dp"
            tools:ignore="RtlHardcoded" />
        <ImageView
            android:layout_width="@dimen/first_screen_preview_size"
            android:layout_height="@dimen/first_screen_preview_size"
            app:srcCompat="@drawable/question"
            android:id="@+id/imagePreviewSideB"
            android:layout_row="11"
            android:layout_column="7" android:layout_gravity="top"
            android:layout_marginBottom="10dp"
            tools:ignore="ContentDescription" />

        <Button
            android:layout_width="302dp"
            android:layout_height="@dimen/btn_add_photo_size"
            android:text="@string/btn_next_step"
            android:id="@+id/next_step" android:layout_row="13" android:layout_column="7" android:layout_gravity="top|left"
            tools:ignore="RtlHardcoded" />
    </GridLayout>

</LinearLayout>