<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="ru.dmitry.kartsev.fotopodushki.MainActivity">

    <GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:columnCount="8"
            android:orientation="horizontal"
            android:id="@+id/gridLayout" android:rowCount="23">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:id="@+id/textView" android:layout_row="2" android:layout_column="5" android:layout_gravity="fill"
                android:layout_columnSpan="3" android:layout_marginBottom="10dp"/>
        <ImageView
                android:id="@+id/imageFoto1" android:layout_row="5" android:layout_column="5"
                android:layout_width="@dimen/img_check_photo_size"
                android:layout_height="@dimen/img_check_photo_size" android:layout_margin="2dp" android:layout_gravity="top|left"
                android:background="@drawable/question"/>
        <Button
                android:layout_width="302dp"
                android:layout_height="@dimen/btn_add_photo_size"
                android:text="@string/btn_add_foto_1"
                android:id="@+id/add_foto_1" android:layout_row="5" android:layout_column="7"
                android:layout_gravity="top"/>
        <ImageView
                android:layout_width="@dimen/img_check_photo_size"
                android:layout_height="@dimen/img_check_photo_size"
                android:id="@+id/imageFoto2" android:layout_row="7" android:layout_column="5"
                android:layout_margin="2dp" android:layout_gravity="top|left" android:background="@drawable/question"/>
        <Button
                android:layout_width="302dp"
                android:layout_height="@dimen/btn_add_photo_size"
                android:text="@string/btn_add_foto_2"
                android:id="@+id/add_foto_2" android:layout_row="7" android:layout_column="7" android:layout_gravity="top|left"
                android:layout_marginBottom="15dp"/>
        <ImageView
            android:id="@+id/imageMaterial"
                   android:layout_row="8" android:layout_column="5" android:layout_margin="2dp"
                   android:layout_gravity="top|left" android:background="@drawable/question"
            android:layout_width="@dimen/img_check_size"
            android:layout_height="@dimen/img_check_size" />
        <Spinner
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:id="@+id/chooseMaterial" android:layout_row="8" android:layout_column="7"
                android:layout_gravity="top|left"
            android:elevation="1dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp" />
        <ImageView
            android:id="@+id/imageSize"
                   android:layout_row="9" android:layout_column="5" android:layout_margin="2dp"
                   android:layout_gravity="top|left" android:background="@drawable/question"
            android:layout_width="@dimen/img_check_size"
            android:layout_height="@dimen/img_check_size" />
        <Spinner
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:id="@+id/chooseSize" android:layout_row="9" android:layout_column="7"
                android:layout_gravity="top|left"
            android:layout_margin="0dp" />
        <ImageView
            android:id="@+id/imageBrushes"
                   android:layout_row="10" android:layout_column="5" android:layout_margin="2dp"
                   android:layout_gravity="top|left" android:background="@drawable/question"
            android:layout_width="@dimen/img_check_size"
            android:layout_height="@dimen/img_check_size" />
        <Spinner
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:id="@+id/chooseBrushes" android:layout_row="10" android:layout_column="7"
                android:layout_gravity="top|left"
            android:elevation="1dp"
            android:layout_margin="0dp" />
        <ImageView android:layout_width="@dimen/img_check_size" android:layout_height="@dimen/img_check_size" android:id="@+id/imageName"
                   android:layout_row="11" android:layout_column="5"
                   android:layout_gravity="top|left" android:layout_marginLeft="5dp" android:layout_marginRight="2dp"
                   android:layout_marginBottom="2dp" android:background="@drawable/question"
                   android:layout_marginTop="7dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/inputName" android:layout_row="11" android:layout_column="7"
                android:layout_gravity="top|left" android:hint="@string/hint_inputName"
                android:layout_marginBottom="2dp"/>
        <ImageView android:layout_width="@dimen/img_check_size" android:layout_height="@dimen/img_check_size" android:id="@+id/imageEmail"
                   android:layout_row="12" android:layout_column="5"
                   android:layout_gravity="top|left" android:layout_marginLeft="5dp" android:layout_marginRight="2dp"
                   android:layout_marginBottom="2dp" android:background="@drawable/question"
                   android:layout_marginTop="7dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/inputEmail" android:layout_row="12" android:layout_column="7"
                android:layout_gravity="top|left" android:layout_marginBottom="2dp"
                android:hint="@string/hint_inputEmail"/>
        <ImageView android:layout_width="@dimen/img_check_size" android:layout_height="@dimen/img_check_size" android:id="@+id/imagePhone"
                   android:layout_row="13" android:layout_column="5"
                   android:layout_gravity="top|left" android:layout_marginLeft="5dp" android:layout_marginRight="2dp"
                   android:layout_marginBottom="2dp" android:background="@drawable/question"
                   android:layout_marginTop="7dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/inputPhone" android:layout_row="13" android:layout_column="7"
                android:layout_gravity="top|left" android:layout_marginBottom="2dp"
                android:inputType="phone"
                android:ems="10"
                android:hint="@string/hint_inputPhone"/>

    </GridLayout>
</RelativeLayout>
